--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "body-parser": "^1.20.3",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -23,6 +24,7 @@
     "mongoose": "^8.19.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.15.3",
+    "nodemailer": "^7.0.10",
     "storyhaven": "file:"
   },
   "devDependencies": {
